global-network-policy/allow-public-ip.yaml
apiVersion: crd.projectcalico.org/v1
kind: GlobalNetworkPolicy
metadata:
  name: external-log-access
spec:
  selector: all()
  order: 200
  types:
    - Egress
  egress:
  - action: Allow
    protocol: UDP
    source: {}
    destination:
      ports:
      - '53'
  - action: Allow
    destination:
      selector: role == "log"
