global-network-policy/external-control.yaml
apiVersion: crd.projectcalico.org/v1
kind: GlobalNetworkPolicy
metadata:
  name: external-control
spec:
  selector: all()
  order: 200
  types:
    - Egress
  egress:
  - action: Allow
    destination:
      selector: role == "allow"
  - action: Deny
    destination:
      selector: role == "deny"
