global-network-policy/global-dns.yaml
apiVersion: crd.projectcalico.org/v1
kind: GlobalNetworkPolicy
metadata:
  name: allow-kube-dns
spec:
  order: 5
  selector: all()
  types:
    - Egress
  egress:
  - action: Allow
    protocol: UDP
    source: {}
    destination:
        services:
          name: kube-dns
          namespace: kube-system
